<?xml version="1.0"?>
<package format="2">
  <name>ros-trimble-bd960</name>
  <version>1.0</version>
  <description>
    NMEA-based ROS driver specifically for the Trimble BD960 GPS
  </description>

  <maintainer email="jgomallette@gmail.com">MrCerealKiller</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python-serial</exec_depend>
</package>
